--- a/app/globals.css
+++ b/app/globals.css
@@ -170,6 +170,14 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+.overflow-x-auto::-webkit-scrollbar {
+  display: none;
+}
+.overflow-x-auto {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer utilities {
   .font-jakarta {
     font-family: var(--font-family-plus-jakarta);
